# value_stream_v2

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  LICENSE  README.md  design-qa.md  index.html  mkdocs.yml  mypy-baseline.txt  mypy.ini  pyproject.toml  ruff.toml  skills-lock.json
.github/workflows/: docs.yml  tests.yml
ALGORITHMS/: index.html
BUILDER_TUTORIAL/: index.html
CHART_CATALOG/: index.html
CHAT_WITH_DATA_MLP1/: index.html
DOMAIN_MODEL/: index.html
EXPRESSION_DSL/: index.html
IMPLEMENTATION_PLAN/: index.html
INDEX/: index.html
KICKOFF_PROMPT/: index.html
PEGA_EXPORT_TUTORIAL/: index.html
PHASE1_WALKTHROUGH/: index.html
PHASE2_WALKTHROUGH/: index.html
PHASE3_WALKTHROUGH/: index.html
PHASE4_WALKTHROUGH/: index.html
PHASE6_RUNBOOK/: index.html
PROCESSOR_SPECS/: index.html
QA/: index.html
READERS_AND_FORMATS/: index.html
REPORTING_BACKLOG/: index.html
concepts/adr/: index.html
concepts/architecture/: index.html
concepts/architecture-overview/: index.html
concepts/business-functionality/: index.html
concepts/domain-model/: index.html
concepts/product-overview/: index.html
design/chat-with-data-mlp1/: index.html
design/implementation-plan/: index.html
design/kickoff-prompt/: index.html
design/kpi-recipe-backlog/: index.html
design/mockups/: 01_sitemap.html  02_ingestion_flow.html  05_builder.html  06_pipelines.html  _theme.css
design/replacement-design/: index.html
design/reporting-backlog/: index.html
docs/: index.md
docs/.obsidian/: appearance.json
docs/concepts/: architecture-overview.md  architecture.md  business-functionality.md  domain-model.md  product-overview.md
schemas/: catalog.json  dashboards.json  expr.json  kpi-recipes.json  metrics.json  pipelines.json  processors.json
scripts/: mypy_gate.py
search/: search_index.json
tests/: conftest.py
(+290 files in other folders)
