[project]
name = "valuestream"
version = "0.1.0"
description = "Aggregate-first business intelligence platform — configuration-driven, file-input, sufficient-statistics at rest."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Grigoriy Sen", email = "grigoriy.sen@pega.com" }
]
dependencies = [
    "polars>=1.41.0",
    "duckdb>=1.5",
    "pyarrow>=19",
    "datasketches>=5.2.0",
    "pydantic>=2.13.4",
    "jsonschema>=4",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.9",
    "structlog>=24.4.0",
    "pandas>=3.0",
    "plotly>=6.8.0",
    "scipy>=1.17.1",
    "streamlit>=1.58",
    "litellm>=1.88.1",
]

[project.optional-dependencies]
ai = [
    "mcp>=1.0",
]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.112",
    "ruff>=0.7",
    "mypy>=1.13",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-redirects>=1.2",
    "pre-commit>=4.0",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.22",
    "fastapi>=0.115",
    "httpx2",
]

[project.scripts]
valuestream = "valuestream.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/valuestream"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: single-module tests",
    "integration: multi-module flows in a tmpdir workspace",
    "e2e: full pipeline + UI / API smoke tests",
    "bench: performance benchmarks (skipped in local default runs)",
    "slow: anything > 5 s",
    "property: hypothesis property tests",
]
filterwarnings = ["error"]
